# dexterity-interface

./: .gitignore  .gitmodules  DEMO.md  Dockerfile  Dockerfile.isaac  Dockerfile.isaacv2  Dockerfile.ros  Dockerfile.ros.gpu  NvStreamer-20250921-144535.etli  README.md  README_LONG_HORIZON.md  STUDY.md  TELEOPERATION_DEMO.md  Transcribe.py  allfiles.txt  bimanual_arms.yml  bimanual_arms_left.yml  compose.isaac.yaml  compose.isaacv2.yaml  compose.ros.gpu.yaml  compose.ros.joystick.yaml  compose.ros.yaml  curobo_test.py  docker-compose.yaml  franka_mesh.yml  gui.py  isaaclab.sh  k4aviewer.err  output.txt  record.py  requirements.txt  speech_to_text.py  speech_to_text_gpt_garbage.py  test.m4a  test.py
app/ui_backend/: pyproject.toml
app/ui_backend/src/ui_backend/: UIBridgeNode.py  api.py  generate_plans.py  schemas.py  utils.py
app/ui_backend/src/ui_backend/callie_C3_T1/: 01KJGENWKGEG464XXV77JR1Q1D.json  01KJGEVQ33TEWR03R0N86QACGN.json  01KJGEYGK3V94FXRJWSXTPNP8E.json  01KJGF09A47H9WQ103311VTMX2.json  01KJGF12TPBASJ3HMDTX6P2EFK.json  01KJGF1GCWY7A2Y390W0RSY6BB.json  01KJGF21AV61C0PSN9ZC09T0ZW.json
app/ui_backend/src/ui_backend/callie_plans_C2_T2/: 01KJGCFAVZ4W6ABQRG3EZ2MC1E.json  01KJGDNN4G21HRVXXH44M41FC4.json  01KJGDS795S90W5NVWJ9SGDX3R.json  01KJGDWK6VKN4EQC4W73MB1HMV.json  01KJGE16BPC86CZY3A8VN95T8X.json
app/ui_backend/src/ui_backend/json_primitives/: 01KC1YJH7SH95AK3Y5N8P7B9NP.json  01KC1Z2BEEMSBPT6GJD8CK4672.json  01KC1Z4K7N2V68WAWP2ZDQFVAR.json  01KC1ZT6647RG93SEN0QH3M8K0.json  01KC2HQS4CRMSCMP0Z1ZZMMNS4.json  01KC2JF81SJED9391BCKT7M6BF.json  01KC2JMS381W70C45TGGDP1Z45.json  01KC2JQ6RP0GDF51B3WHFJMNPC.json  01KC7AG5ZQS18B5YJEM29WDV26.json  01KC7B2RKPN4W9WNVJ2DTS7DS7.json  01KCHTF3E7Y1PXK2PWCK46G8FH.json  01KD3SRV5294CMZD5VHPTM6YHF.json  01KD3SSBJQR1YA9PV0GV212V40.json  01KDVRFRY95JD3ETDECKYR8PRG.json  01KE56GVRXQ7YQP07KQED53RT6.json  01KE571AQSAS5BA1C29SY35JSP.json  01KE571SKHVC1XJH5C2J2QNXN0.json  01KE57NMKSHK464SP9J4XHTVYN.json  01KE7JSAZQWG9HR8GFFYR8WCWR.json  01KE9WRM4RAJ0F3XZV5R4H4HKP.json  01KE9X4P7E3EV9TV08NRCPVKS6.json  01KE9YV4AY7N9HXQGT24BWDDCY.json  01KE9ZTQ10NT7T1HVCD1BPC1GM.json  01KE9ZYE5E199BVVXYFDJ7Q16T.json  01KEZ1848PEZC70RGPEKMJPW67.json  01KEZ193EVG63T8699QYZF0JYP.json  01KEZ19SCM98DS2ZPTNVH91E83.json  01KF1DRHBS0GZ1FWEFTS6F948C.json  01KF1EYASH0SS5GDG1YVCMBBKV.json  01KF1QFM5GXB2BRH8273728PVN.json  01KF1RNTMJWWTB4MWGRSHSAV58.json  01KF1TRBFCDQJF6STGAG4PFDW6.json  01KF1TVC0WSJ8SV7EEVH62F9B1.json  01KF1TXZYWQNTMMQJCH8C4NCMV.json  01KF1V73YSV7J1JHYJ52DJ1VP1.json  01KF1WGM3GGQJVKMTBEWXSWE5J.json  01KF1WJC0EQVF4PSZN84CRWHDY.json  01KF3YK1RGWFHXQAZKF4SEWMAN.json  01KF3YNB3BJNWA8FF92ADKRS9F.json  01KF3YRFKS922969YCXSFZ7EGB.json  (+815 more)
app/ui_backend/src/ui_backend/json_save/: 01KC5CDKTVF2FC81H7RMB3EPJA.json  01KC5CFG57899F3SJJP65NW9ZP.json  01KC797323NRD57XHD9SDQTW02.json  01KC7HXHHKNE7T5HZ8PMDT7FW7.json  01KGDGBW8J35PY89Y06PFK7KNF.json  01KGDH4F70GKM2DSNVM659V3EP.json  01KHS15FCA3NCQ2G7YXK46GAFF.json
app/ui_backend/src/ui_backend/skylar_plans/: 01KJE5DNAFZX4DASQ0JFBWBVJM.json  01KJE5NDB6QV2M48SP8HKBF0V1.json  01KJE5SMBWGDP8DS8P6FHDXYDP.json  01KJE5W5340BQVEJJD2MHZ7P3M.json  01KJE5WQ4WV383QYGYV234X734.json  01KJE5X5XXQWQS0409B41MBY2P.json  01KJE5XM7X3WQ5YPB45V0TK65E.json  01KJE5YQDDVGS0ANRQ4YM5X6WX.json  01KJE5Z8CXRA12PM7K23V89E0D.json  01KJE617YDC3GASJJTB4TPHW22.json  01KJE61X7F94NCDD4ZEZEW90XF.json  01KJE62CCFE4DWV6KBWHVWZJ9P.json  01KJE646C6ST9PSEBCBMYH737M.json  01KJE66KQFMN9JV7704GR4W2A9.json  01KJE67CVQ6WD01E0D9E2XRS92.json  01KJE68CJQJCZF17MY6TSS3GYG.json  01KJE6XC3JR74206VSJ1BJ6ZSC.json  01KJE71F3W85QA142B4YJPDRXR.json  01KJE741GQHB5Y12NP00YEPEGE.json  01KJE75Z34QS6394222STAFBYD.json  01KJE76VX66C98S57N4PMX9HYN.json  01KJE79KS1A0TPF8WEM1SDWBYQ.json  01KJE7E5TG3NPFAV7XRWYJBKWH.json  01KJE7JXHPZ990SDESQ59W7QFE.json  01KJE7WVQ9Z3JN5VSZ9ZDB8SZH.json  01KJE7YJSJSXWQSPD98FWGCYEY.json  01KJE8AJ5343FHB6R0J2NNMWX4.json  01KJE8B0GKEHNSNP2AKECGWVEV.json  01KJE8BX9V6VW9AAK1QY0CZHG5.json  01KJE8P9KPYAEBMC887TZFMGCW.json  01KJE8QW55MKGC0B6KCSXSQ2ER.json  01KJE8T3CDVF3DJ84S6YTNDETZ.json  01KJE8V1BEAASJW96HD5J2PN1Z.json  01KJE8WZ5PDYMQJFC6JJ3ZFFTF.json  01KJE8XY3617SPB2XEFJ7X1YJH.json
app/ui_backend/src/ui_backend/utils/: UIBridgeNode.py  helpers.py  object_tracking.py  (+1 more)
interfaces/robot_motion_interface/robot_motion_interface_cpp/: CMakeLists.txt
interfaces/robot_motion_interface/robot_motion_interface_cpp/cmake/: robot_motion_interface_cppConfig.cmake.in
interfaces/robot_motion_interface/robot_motion_interface_cpp/src/: interface.hpp
libs/isaacsim_ui_interface/: README.md  pyproject.toml
libs/planning/planning_py/: README.md  pyproject.toml
libs/primitives/primitives_py/: pyproject.toml
libs/rm_2/: CMakeLists.txt  pyproject.toml
libs/rm_2/cmake/: rm_2Config.cmake.in
libs/rm_2/src/rm_2/: __init__.py  test.py
libs/robot_motion/: CMakeLists.txt  README.md  pyproject.toml
libs/robot_motion/cpp/examples/: joint_torque.cpp
libs/robot_motion/log/: latest_build  latest_list
libs/robot_motion/robot_motion_cpp/: CMakeLists.txt  README.md
libs/robot_motion/robot_motion_py/: pyproject.toml
libs/robot_motion/src/robot_motion/: CMakeLists.txt  __init__.py  package.xml  run_bash_helper.sh  test.py
libs/robot_motion_interface/: CMakeLists.txt  README.md  pyproject.toml
libs/robot_motion_interface/config/: bimanual_arm_config.yaml  isaacsim_config.yaml  isaacsim_config_docker.yaml  left_panda_config.yaml  left_tesollo_config.yaml  mujoco_config.yaml  right_panda_config.yaml
libs/robot_motion_interface/cpp/examples/: panda.cpp  tesollo.cpp
libs/robot_motion_interface/cpp/src/: interface.cpp  panda_interface.cpp
libs/robot_motion_interface/robot_motion_interface_cpp/: CMakeLists.txt
libs/robot_motion_interface/robot_motion_interface_cpp/src/: interface.cpp
libs/robot_motion_interface/robot_motion_interface_py/: pyproject.toml
libs/robot_motion_interface/ros/log/: latest_build
libs/robot_motion_interface/src/robot_motion_interface/: __init__.py  bimanual_interface.py  interface.py
libs/sensor_interface/sensor_interface_py/: pyproject.toml
(+394 files in other folders)
