[build-system]
requires = ["setuptools >= 77.0.3", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-backend"
version = "0.0.1"
authors = [
  { name="Mya Schroder", email="schromya@gmail.com" },
]
description = "Dexterity Interface UI backend"
readme = "README.md" 
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["fastapi>=0.116.0", "uvicorn>=0.35.0", "numpy>=1.26.0"]
