[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "planning"
version = "0.0.1"
authors = [
  { name="Mya Schroder", email="schromya@gmail.com" },
]
description = "Planning for dexterity interface"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.3.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "ultralytics",
    "pillow",
    "matplotlib",
]

[project.optional-dependencies]
# For when sensor_interface_py becomes installable (later)
sensors = ["sensor_interface_py>=0.0.1"]
# For local monorepo installs (when sensor_interface exists in libs/)
# Replace ABSOLUTE_PATH with the real path later
local-sensors = [
  "sensor_interface_py @ file:///ABSOLUTE_PATH_TO/dexterity-interface/libs/sensor_interface"
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["planning*"]