[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-interface-py"
version = "0.0.1"
authors = [
  { name="Mya Schroder", email="schromya@gmail.com" },
]
description = "Sensor Interfaces"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["numpy>=1.26.0", "PyYAML>=6.0.0", "pyrealsense2", "opencv-python"]
